k8s/services/netbox/app/server/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbox
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: netbox
  hostnames:
    - netbox.as212024.net
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: netbox-server
          port: 80
